[gd_scene load_steps=7 format=3 uid="uid://pkwc1nju807i"]

[ext_resource type="Script" uid="uid://di4k6jf6kfwdp" path="res://ui/main_menu.gd" id="1_0dkrt"]
[ext_resource type="PackedScene" uid="uid://dhcdpos01pgrs" path="res://ui/dark_button.tscn" id="1_t7e0r"]
[ext_resource type="PackedScene" uid="uid://cd3am5taonrbv" path="res://scenes/forest_world.tscn" id="2_8uxxo"]
[ext_resource type="PackedScene" uid="uid://4umkcl650t6d" path="res://scenes/forest_background.tscn" id="2_ei257"]
[ext_resource type="FontFile" uid="uid://ijfvv6tnsiyp" path="res://fonts/Beholden-Bold.ttf" id="2_wk0pr"]
[ext_resource type="FontFile" uid="uid://cq68pghecyjlq" path="res://fonts/Beholden-Bold-Italic.ttf" id="3_rmr83"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0dkrt")

[node name="ForestBackground" parent="." instance=ExtResource("2_ei257")]

[node name="ForestWorld" parent="." instance=ExtResource("2_8uxxo")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wk0pr")
theme_override_font_sizes/font_size = 72
text = "WIZARDS GATHER"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rmr83")
theme_override_font_sizes/font_size = 36
text = "A Runner"
horizontal_alignment = 1

[node name="PlayDarkButton" parent="VBoxContainer" instance=ExtResource("1_t7e0r")]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PlayDarkButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_wk0pr")
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="QuitDarkButton" parent="VBoxContainer" instance=ExtResource("1_t7e0r")]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/QuitDarkButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0017505, 1)
theme_override_fonts/font = ExtResource("2_wk0pr")
theme_override_font_sizes/font_size = 48
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/PlayDarkButton" to="." method="_on_play_dark_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitDarkButton" to="." method="_on_quit_dark_button_pressed"]
